# DeeperAndroid

./: .gitignore  DeeperAndroid.xmind  README.txt  build.gradle  config.gradle  configuration.gradle  deeper_android.jks  deeperandroid.jks  dependency.gradle  libs.gradle  settings.gradle
app/: build.gradle
deepndk/src/main/cpp/: CMakeLists.txt
deepndk/src/main/cpp/deepplayer/: deep_player.cpp
deepndk/src/main/cpp/ffmpeg/include/libavcodec/: ac3_parser.h  avcodec.h  avdct.h  avfft.h  bsf.h  codec.h  codec_desc.h  codec_id.h  codec_par.h  d3d11va.h  dirac.h  dv_profile.h  dxva2.h  mediacodec.h  packet.h  qsv.h  vaapi.h  vdpau.h  videotoolbox.h  xvmc.h
deepndk/src/main/cpp/ffmpeg/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h  version.h
deepndk/src/main/cpp/ffmpeg/include/libavformat/: avformat.h  avio.h  version.h
deepndk/src/main/cpp/ffmpeg/include/libavutil/: adler32.h  avstring.h  avutil.h  blowfish.h  bprint.h  bswap.h  buffer.h  camellia.h  cast5.h  channel_layout.h  common.h  crc.h  des.h  dict.h  dovi_meta.h  downmix_info.h  encryption_info.h  error.h  eval.h  fifo.h  film_grain_params.h  frame.h  hdr_dynamic_metadata.h  hmac.h  hwcontext.h  hwcontext_cuda.h  hwcontext_d3d11va.h  hwcontext_dxva2.h  hwcontext_mediacodec.h  hwcontext_opencl.h  hwcontext_qsv.h  hwcontext_vaapi.h  hwcontext_vdpau.h  hwcontext_vulkan.h  imgutils.h  intreadwrite.h  lfg.h  log.h  mastering_display_metadata.h  mathematics.h  (+19 more)
deepndk/src/main/cpp/ffmpeg/include/libswresample/: swresample.h
deepndk/src/main/cpp/ffmpeg/include/libswscale/: swscale.h
(+256 files in other folders)
